--- a/index.html
+++ b/index.html
@@ -3,231 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WYSIWYG HTML Editor</title>
-    <!-- Tailwind CSS CDN for quick styling -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Custom styles to ensure full height and responsive layout */
-        body {
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            overflow: hidden; /* Prevent body scroll, content will scroll within panels */
-        }
-        #app-container {
-            height: 100vh; /* Full viewport height */
-            display: flex;
-            flex-direction: column; /* Stack vertically on small screens */
-            @media (min-width: 1024px) { /* On large screens (lg breakpoint in Tailwind) */
-                flex-direction: row; /* Arrange horizontally */
-            }
-        }
-        .panel {
-            flex: 1; /* Each panel takes equal space */
-            display: flex;
-            flex-direction: column;
-            border-radius: 0.5rem; /* Rounded corners for panels */
-        }
-        textarea, iframe {
-            flex: 1; /* Textarea and iframe fill their respective panels */
-            width: 100%;
-            height: 100%; /* Ensures they fill the panel height */
-        }
-        /* Specific styling for the iframe content to make it editable */
-        iframe.editable-frame body {
-            margin: 10px; /* Add some padding inside the iframe */
-            min-height: calc(100% - 20px); /* Ensure body takes up most of the space for contenteditable */
-            outline: none; /* Remove default focus outline */
-        }
-    </style>
+    <title>Advanced WYSIWYG HTML Editor</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="bg-gray-100 text-gray-800">
-    <div id="app-container" class="p-4 gap-4">
-        <!-- Left Panel: HTML Code Editor -->
-        <div class="panel bg-white shadow-lg rounded-lg p-4">
-            <h2 class="text-xl font-semibold mb-3 text-center">HTML Source Code</h2>
+<body>
+    <div id="app-container">
+        <div class="panel code-editor-panel">
+            <h2 class="panel-title">HTML Source Code</h2>
             <textarea
                 id="htmlCode"
-                class="border border-gray-300 rounded-md p-3 text-base font-mono focus:outline-none focus:ring-2 focus:ring-blue-500 resize-none"
+                class="code-textarea"
                 placeholder="Paste your HTML code here..."
             >&lt;h1&gt;Welcome to the WYSIWYG Editor!&lt;/h1&gt;
-&lt;p&gt;Edit this text directly in the preview panel.&lt;/p&gt;
-&lt;button class=&quot;bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition-colors duration-200&quot;&gt;Click Me!&lt;/button&gt;
+&lt;p&gt;This is a &lt;strong&gt;powerful&lt;/strong&gt; and &lt;em&gt;intuitive&lt;/em&gt; editor. Try editing the text directly in the preview.&lt;/p&gt;
 &lt;ul&gt;
     &lt;li&gt;Item 1&lt;/li&gt;
     &lt;li&gt;Item 2&lt;/li&gt;
 &lt;/ul&gt;
-&lt;img src=&quot;https://placehold.co/300x150/lightblue/white?text=Placeholder+Image&quot; alt=&quot;Placeholder Image&quot; class=&quot;rounded-md mt-4&quot;&gt;</textarea>
-            <div class="flex flex-col sm:flex-row gap-2 mt-4 justify-center">
-                <button
-                    id="renderButton"
-                    class="bg-green-600 text-white px-5 py-2 rounded-md hover:bg-green-700 transition-colors duration-200 shadow-md flex-1"
-                >
-                    Render HTML
+&lt;p&gt;You can also insert &lt;a href=&quot;https://google.com&quot; target=&quot;_blank&quot;&gt;links&lt;/a&gt; and &lt;span style=&quot;background-color: yellow;&quot;&gt;highlight&lt;/span&gt; text.&lt;/p&gt;
+&lt;img src=&quot;https://placehold.co/400x200/lightgreen/white?text=Editable+Image&quot; alt=&quot;Placeholder Image&quot; style=&quot;width: 100%; max-width: 400px; height: auto; display: block; margin: 1rem 0;&quot;&gt;</textarea>
+            <div class="panel-actions">
+                <button id="renderButton" class="action-button primary">
+                    <i class="fas fa-play"></i> Render HTML
                 </button>
-                <button
-                    id="syncButton"
-                    class="bg-purple-600 text-white px-5 py-2 rounded-md hover:bg-purple-700 transition-colors duration-200 shadow-md flex-1"
-                >
-                    Sync HTML from Preview
+                <button id="syncButton" class="action-button secondary">
+                    <i class="fas fa-sync-alt"></i> Sync from Preview
                 </button>
-                <button
-                    id="downloadButton"
-                    class="bg-blue-600 text-white px-5 py-2 rounded-md hover:bg-blue-700 transition-colors duration-200 shadow-md flex-1"
-                >
-                    Download HTML
+                <button id="downloadButton" class="action-button tertiary">
+                    <i class="fas fa-download"></i> Download HTML
                 </button>
             </div>
         </div>
 
-        <!-- Right Panel: Rendered HTML Preview -->
-        <div class="panel bg-white shadow-lg rounded-lg p-4 relative overflow-hidden">
-            <h2 class="text-xl font-semibold mb-3 text-center">Live Preview (Editable)</h2>
+        <div class="panel preview-panel">
+            <h2 class="panel-title">Live Preview (Editable)</h2>
+            <div id="editorToolbar" class="editor-toolbar">
+                <button class="toolbar-button" data-command="bold" title="Bold"><i class="fas fa-bold"></i></button>
+                <button class="toolbar-button" data-command="italic" title="Italic"><i class="fas fa-italic"></i></button>
+                <button class="toolbar-button" data-command="underline" title="Underline"><i class="fas fa-underline"></i></button>
+                <button class="toolbar-button" data-command="strikeThrough" title="Strikethrough"><i class="fas fa-strikethrough"></i></button>
+                <button class="toolbar-button" data-command="superscript" title="Superscript"><i class="fas fa-superscript"></i></button>
+                <button class="toolbar-button" data-command="subscript" title="Subscript"><i class="fas fa-subscript"></i></button>
+                <button class="toolbar-button" data-command="insertUnorderedList" title="Bulleted List"><i class="fas fa-list-ul"></i></button>
+                <button class="toolbar-button" data-command="insertOrderedList" title="Numbered List"><i class="fas fa-list-ol"></i></button>
+
+                <div class="color-picker-container">
+                    <label for="fontColorPicker" class="sr-only">Font Color</label>
+                    <input type="color" id="fontColorPicker" class="color-picker" title="Font Color">
+                    <span class="color-label"><i class="fas fa-palette"></i> Text</span>
+                </div>
+                <div class="color-picker-container">
+                    <label for="fontBgColorPicker" class="sr-only">Highlight Color</label>
+                    <input type="color" id="fontBgColorPicker" class="color-picker" title="Highlight Color">
+                    <span class="color-label"><i class="fas fa-highlighter"></i> Highlight</span>
+                </div>
+                <div class="color-picker-container">
+                    <label for="divBgColorPicker" class="sr-only">Div Background Color</label>
+                    <input type="color" id="divBgColorPicker" class="color-picker" title="Block Background Color">
+                    <span class="color-label"><i class="fas fa-fill-drip"></i> Block Bg</span>
+                </div>
+
+                <button class="toolbar-button" id="insertLinkBtn" title="Insert Link"><i class="fas fa-link"></i></button>
+                <button class="toolbar-button" id="insertImageBtn" title="Insert Image"><i class="fas fa-image"></i></button>
+                <button class="toolbar-button" id="clearFormatBtn" title="Clear Formatting"><i class="fas fa-eraser"></i></button>
+
+                <select id="fontSizeSelect" class="toolbar-select" title="Font Size">
+                    <option value="" disabled selected>Font Size</option>
+                    <option value="1">Smallest</option>
+                    <option value="2">Smaller</option>
+                    <option value="3">Normal</option>
+                    <option value="4">Large</option>
+                    <option value="5">Larger</option>
+                    <option value="6">Huge</option>
+                    <option value="7">Largest</option>
+                </select>
+            </div>
+
             <iframe
                 id="previewFrame"
-                class="editable-frame border border-gray-300 rounded-md bg-white"
+                class="editable-frame"
                 sandbox="allow-same-origin allow-scripts allow-forms allow-modals"
             ></iframe>
-            <!-- Message Box for user feedback -->
-            <div id="messageBox" class="absolute bottom-4 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-sm px-4 py-2 rounded-full shadow-lg opacity-0 transition-opacity duration-300">
-                <!-- Messages will appear here -->
-            </div>
+
+            <div id="messageBox" class="message-box"></div>
         </div>
     </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            // Get references to the HTML elements
-            const htmlCodeTextArea = document.getElementById('htmlCode');
-            const previewFrame = document.getElementById('previewFrame');
-            const renderButton = document.getElementById('renderButton');
-            const syncButton = document.getElementById('syncButton');
-            const downloadButton = document.getElementById('downloadButton'); // New button reference
-            const messageBox = document.getElementById('messageBox');
+    <div id="linkModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h3>Insert Hyperlink</h3>
+            <label for="linkURL">URL:</label>
+            <input type="url" id="linkURL" placeholder="https://example.com" class="modal-input">
+            <label for="linkText">Text to display:</label>
+            <input type="text" id="linkText" placeholder="Click here" class="modal-input">
+            <button id="confirmLinkBtn" class="modal-button primary">Insert Link</button>
+        </div>
+    </div>
 
-            // Function to display messages to the user
-            function showMessage(message, duration = 3000) {
-                messageBox.textContent = message;
-                messageBox.classList.remove('opacity-0');
-                messageBox.classList.add('opacity-100');
-                setTimeout(() => {
-                    messageBox.classList.remove('opacity-100');
-                    messageBox.classList.add('opacity-0');
-                }, duration);
-            }
+    <div id="imageModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h3>Insert Image</h3>
+            <label for="imageURL">Image URL:</label>
+            <input type="url" id="imageURL" placeholder="https://example.com/image.jpg" class="modal-input">
+            <button id="confirmImageBtn" class="modal-button primary">Insert Image</button>
+        </div>
+    </div>
 
-            // Function to render the HTML from the textarea into the iframe
-            function updatePreview() {
-                try {
-                    // Get the HTML content from the textarea
-                    const htmlContent = htmlCodeTextArea.value;
-
-                    // Write the HTML into the iframe's document
-                    // We include a basic HTML structure and some default body styling for better rendering
-                    const iframeDoc = previewFrame.contentWindow.document;
-                    iframeDoc.open();
-                    iframeDoc.write(`
-                        <!DOCTYPE html>
-                        <html>
-                        <head>
-                            <style>
-                                /* Basic styles for the iframe content to prevent default margins/padding */
-                                body {
-                                    margin: 0;
-                                    padding: 10px;
-                                    box-sizing: border-box;
-                                    font-family: 'Inter', sans-serif; /* Consistent font */
-                                    line-height: 1.5;
-                                }
-                                /* Basic Tailwind-like reset for elements within the iframe */
-                                * {
-                                    box-sizing: border-box;
-                                }
-                                /* Ensure images within iframe are responsive */
-                                img {
-                                    max-width: 100%;
-                                    height: auto;
-                                    display: block; /* Remove extra space below image */
-                                }
-                            </style>
-                        </head>
-                        <body>
-                            ${htmlContent}
-                        </body>
-                        </html>
-                    `);
-                    iframeDoc.close();
-
-                    // Make the iframe content editable
-                    // designMode='on' makes the entire document editable, allowing direct text editing
-                    // This is the core of the WYSIWYG functionality.
-                    iframeDoc.designMode = 'on';
-
-                    showMessage('HTML rendered successfully! You can now edit the preview directly.', 3000);
-                } catch (error) {
-                    console.error('Error rendering HTML:', error);
-                    showMessage('Error rendering HTML. Check console for details.', 5000);
-                }
-            }
-
-            // Function to sync HTML from the iframe back to the textarea
-            function syncFromPreview() {
-                try {
-                    // Get the innerHTML of the iframe's body, which contains the live edited content
-                    const liveHtmlContent = previewFrame.contentWindow.document.body.innerHTML;
-
-                    // Update the textarea's value with the content from the iframe
-                    htmlCodeTextArea.value = liveHtmlContent;
-
-                    showMessage('HTML synced from preview to source code.', 3000);
-                } catch (error) {
-                    console.error('Error syncing HTML from preview:', error);
-                    showMessage('Error syncing HTML. Make sure the preview is loaded.', 5000);
-                }
-            }
-
-            // New function to download the HTML code
-            function downloadHtml() {
-                try {
-                    // Get the HTML content from the textarea
-                    const htmlContent = htmlCodeTextArea.value;
-                    const filename = 'my_editable_page.html';
-
-                    // Create a Blob from the HTML content
-                    const blob = new Blob([htmlContent], { type: 'text/html' });
-
-                    // Create a temporary anchor element
-                    const a = document.createElement('a');
-                    a.href = URL.createObjectURL(blob); // Create a URL for the blob
-                    a.download = filename; // Set the download filename
-
-                    // Append the anchor to the body (not visible) and click it to trigger download
-                    document.body.appendChild(a);
-                    a.click();
-
-                    // Clean up: remove the anchor and revoke the object URL
-                    document.body.removeChild(a);
-                    URL.revokeObjectURL(a.href);
-
-                    showMessage(`'${filename}' downloaded successfully!`, 3000);
-                } catch (error) {
-                    console.error('Error downloading HTML:', error);
-                    showMessage('Error downloading HTML. Check console for details.', 5000);
-                }
-            }
-
-            // Event Listeners
-            // Render button click
-            renderButton.addEventListener('click', updatePreview);
-
-            // Sync button click
-            syncButton.addEventListener('click', syncFromPreview);
-
-            // Download button click (NEW)
-            downloadButton.addEventListener('click', downloadHtml);
-
-            // Initial render when the page loads with the default content
-            updatePreview();
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
