--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Advanced WYSIWYG HTML Editor</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&family=Lato:wght@400;700&family=Montserrat:wght@400;700&family=Merriweather:wght@400;700&family=Playfair+Display:wght@400;700&family=Lora:wght@400;700&family=Ubuntu:wght@400;700&family=Nunito:wght@400;700&family=Poppins:wght@400;700&family=Oswald:wght@400;700&family=Raleway:wght@400;700&family=Dancing+Script&family=Indie+Flower&family=Bebas+Neue&family=Fira+Sans&family=PT+Sans&family=Source+Sans+3&family=Inter:wght@400;700&family=Chakra+Petch&family=DotGothic16&family=Kalam&family=Press+Start+2P&family=Permanent+Marker&family=Shadows+Into+Light&family=Pacifico&family=Comfortaa&family=Architects+Daughter&family=Lobster&family=Abril+Fatface&family=Anton&family=Bitter&family=Cabin&family=Crimson+Text&family=Dosis&family=Exo+2&family=Fjalla+One&family=Heebo&family=IBM+Plex+Sans&family=Josefin+Sans&family=Kanit&family=Libre+Baskerville&family=Marcellus&family=Noto+Sans&family=Old+Standard+TT&family=Oxygen&family=Questrial&family=Quicksand&family=Rubik&family=Slabo+27px&family=Space+Mono&family=Special+Elite&family=Staatliches&family=Tangerine&family=Titillium+Web&family=Varela+Round&family=Work+Sans&family=Zilla+Slab&family=Alfa+Slab+One&family=Amatic+SC&family=Arimo&family=Asap&family=Barlow&family=Blinker&family=Catamaran&family=Courgette&family=Cousine&family=EB+Garamond&family=Encode+Sans&family=Exo&family=Faustina&family=Gelasio&family=IBM+Plex+Mono&family=Inconsolata&family=Karla&family=Mada&family=Manrope&family=Martel&family=Merriweather+Sans&family=Mukta&family=Nanum+Gothic&family=Orbitron&family=Overpass&family=Patua+One&family=Philosopher&family=Proza+Libre&family=Questrial&family=Rajdhani&family=Red+Hat+Display&family=Sarabun&family=Secular+One&family=Sofia+Sans&family=Solway&family=Space+Grotesk&family=Sora&family=Spectral&family=Spline+Sans&family=Syne&family=Tenor+Sans&family=Texturina&family=Trirong&family=Vollkorn&family=Volkhov&family=Xanh+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app-container">
-        <div class="panel code-editor-panel">
+        <div class="panel code-editor-panel" id="leftPanel">
             <h2 class="panel-title">HTML Source Code</h2>
             <textarea
                 id="htmlCode"
@@ -22,7 +25,8 @@
     &lt;li&gt;Item 2&lt;/li&gt;
 &lt;/ul&gt;
 &lt;p&gt;You can also insert &lt;a href=&quot;https://google.com&quot; target=&quot;_blank&quot;&gt;links&lt;/a&gt; and &lt;span style=&quot;background-color: yellow;&quot;&gt;highlight&lt;/span&gt; text.&lt;/p&gt;
-&lt;img src=&quot;https://placehold.co/400x200/lightgreen/white?text=Editable+Image&quot; alt=&quot;Placeholder Image&quot; style=&quot;width: 100%; max-width: 400px; height: auto; display: block; margin: 1rem 0;&quot;&gt;</textarea>
+&lt;img src=&quot;https://placehold.co/400x200/lightgreen/white?text=Editable+Image&quot; alt=&quot;Placeholder Image&quot; style=&quot;width: 100%; max-width: 400px; height: auto; display: block; margin: 1rem 0;&quot;&gt;
+&lt;p style=&quot;font-family: 'Playfair Display', serif;&quot;&gt;This text is styled with Playfair Display!&lt;/p&gt;</textarea>
             <div class="panel-actions">
                 <button id="renderButton" class="action-button primary">
                     <i class="fas fa-play"></i> Render HTML
@@ -36,7 +40,9 @@
             </div>
         </div>
 
-        <div class="panel preview-panel">
+        <div class="splitter" id="splitter"></div>
+
+        <div class="panel preview-panel" id="rightPanel">
             <h2 class="panel-title">Live Preview (Editable)</h2>
             <div id="editorToolbar" class="editor-toolbar">
                 <button class="toolbar-button" data-command="bold" title="Bold"><i class="fas fa-bold"></i></button>
@@ -48,20 +54,22 @@
                 <button class="toolbar-button" data-command="insertUnorderedList" title="Bulleted List"><i class="fas fa-list-ul"></i></button>
                 <button class="toolbar-button" data-command="insertOrderedList" title="Numbered List"><i class="fas fa-list-ol"></i></button>
 
-                <div class="color-picker-container">
-                    <label for="fontColorPicker" class="sr-only">Font Color</label>
-                    <input type="color" id="fontColorPicker" class="color-picker" title="Font Color">
-                    <span class="color-label"><i class="fas fa-palette"></i> Text</span>
-                </div>
-                <div class="color-picker-container">
-                    <label for="fontBgColorPicker" class="sr-only">Highlight Color</label>
-                    <input type="color" id="fontBgColorPicker" class="color-picker" title="Highlight Color">
-                    <span class="color-label"><i class="fas fa-highlighter"></i> Highlight</span>
-                </div>
-                <div class="color-picker-container">
-                    <label for="divBgColorPicker" class="sr-only">Div Background Color</label>
-                    <input type="color" id="divBgColorPicker" class="color-picker" title="Block Background Color">
-                    <span class="color-label"><i class="fas fa-fill-drip"></i> Block Bg</span>
+                <div class="color-picker-group">
+                    <div class="color-picker-container">
+                        <label for="fontColorPicker" class="sr-only">Font Color</label>
+                        <input type="color" id="fontColorPicker" class="color-picker" title="Font Color">
+                        <span class="color-label"><i class="fas fa-palette"></i> Text</span>
+                    </div>
+                    <div class="color-picker-container">
+                        <label for="fontBgColorPicker" class="sr-only">Highlight Color</label>
+                        <input type="color" id="fontBgColorPicker" class="color-picker" title="Highlight Color">
+                        <span class="color-label"><i class="fas fa-highlighter"></i> Highlight</span>
+                    </div>
+                    <div class="color-picker-container">
+                        <label for="divBgColorPicker" class="sr-only">Block Background Color</label>
+                        <input type="color" id="divBgColorPicker" class="color-picker" title="Block Background Color">
+                        <span class="color-label"><i class="fas fa-fill-drip"></i> Block Bg</span>
+                    </div>
                 </div>
 
                 <button class="toolbar-button" id="insertLinkBtn" title="Insert Link"><i class="fas fa-link"></i></button>
@@ -78,6 +86,10 @@
                     <option value="6">Huge</option>
                     <option value="7">Largest</option>
                 </select>
+
+                <select id="fontFamilySelect" class="toolbar-select" title="Font Family">
+                    <option value="" disabled selected>Font Family</option>
+                    </select>
             </div>
 
             <iframe
